--- a/test/index.html
+++ b/test/index.html
@@ -289,28 +289,28 @@
 				<div class="step-slide__grid">
 					<!-- ONE-ITEM START -->
 					<label for="step4-1" class="pick-item">
-						<input class="pick-item__input" type="radio" name="step4" id="step4-1" value="Как срочно вам нужна новая кухня? - Через 1 месяц">
+						<input class="pick-item__input" type="radio" name="step4" id="step4-1" value="Через 1 месяц">
 						<div class="pick-item__label">Через 1 месяц</div>
 					</label>
 					<!-- ONE-ITEM END -->
 
 					<!-- ONE-ITEM START -->
 					<label for="step4-2" class="pick-item">
-						<input class="pick-item__input" type="radio" name="step4" id="step4-2" value="Как срочно вам нужна новая кухня? - Через 2 месяца">
+						<input class="pick-item__input" type="radio" name="step4" id="step4-2" value="Через 2 месяца">
 						<div class="pick-item__label">Через 2 месяца</div>
 					</label>
 					<!-- ONE-ITEM END -->
 
 					<!-- ONE-ITEM START -->
 					<label for="step4-3" class="pick-item">
-						<input class="pick-item__input" type="radio" name="step4" id="step4-3" value="Как срочно вам нужна новая кухня? - Через 3 месяца">
+						<input class="pick-item__input" type="radio" name="step4" id="step4-3" value="Через 3 месяца">
 						<div class="pick-item__label">Через 3 месяца</div>
 					</label>
 					<!-- ONE-ITEM END -->
 
 					<!-- ONE-ITEM START -->
 					<label for="step4-4" class="pick-item">
-						<input class="pick-item__input" type="radio" name="step4" id="step4-4" value="Как срочно вам нужна новая кухня? - Через 6 месяцев">
+						<input class="pick-item__input" type="radio" name="step4" id="step4-4" value="Через 6 месяцев">
 						<div class="pick-item__label">Через 6 месяцев</div>
 					</label>
 					<!-- ONE-ITEM END -->
@@ -330,28 +330,28 @@
 				<div class="step-slide__grid">
 					<!-- ONE-ITEM START -->
 					<label for="step5-1" class="pick-item">
-						<input class="pick-item__input" type="radio" name="step5" id="step5-1" value="Какой бюджет вы планируете на кухню? Стандарт от 50 000 до 150 000 руб.">
+						<input class="pick-item__input" type="radio" name="step5" id="step5-1" value="Стандарт от 50 000 до 150 000 руб.">
 						<div class="pick-item__label">Стандарт<br>от 50 000 до 150 000 руб.</div>
 					</label>
 					<!-- ONE-ITEM END -->
 
 					<!-- ONE-ITEM START -->
 					<label for="step5-2" class="pick-item">
-						<input class="pick-item__input" type="radio" name="step5" id="step5-2" value="Какой бюджет вы планируете на кухню? Престиж от 150 000 до 200 000 руб.">
+						<input class="pick-item__input" type="radio" name="step5" id="step5-2" value="Престиж от 150 000 до 200 000 руб.">
 						<div class="pick-item__label">Престиж<br>от 150 000 до 200 000 руб.</div>
 					</label>
 					<!-- ONE-ITEM END -->
 
 					<!-- ONE-ITEM START -->
 					<label for="step5-3" class="pick-item">
-						<input class="pick-item__input" type="radio" name="step5" id="step5-3" value="Какой бюджет вы планируете на кухню? Премиум от 200 000 до 350 000 руб.">
+						<input class="pick-item__input" type="radio" name="step5" id="step5-3" value="Премиум от 200 000 до 350 000 руб.">
 						<div class="pick-item__label">Премиум<br>от 200 000 до 350 000 руб.</div>
 					</label>
 					<!-- ONE-ITEM END -->
 
 					<!-- ONE-ITEM START -->
 					<label for="step5-4" class="pick-item">
-						<input class="pick-item__input" type="radio" name="step5" id="step5-4" value="Какой бюджет вы планируете на кухню? Максимальный от 350 000 руб.">
+						<input class="pick-item__input" type="radio" name="step5" id="step5-4" value="Максимальный от 350 000 руб.">
 						<div class="pick-item__label">Максимальный<br>от 350 000 руб.</div>
 					</label>
 					<!-- ONE-ITEM END -->
@@ -374,7 +374,7 @@
 						<div class="pick-item__img">
 							<img src="img/s6-1.jpg" alt="item">
 						</div>
-						<input class="pick-item__input" type="radio" name="step6" id="step6-1" value="Подарок к кухне: Мойка из камня">
+						<input class="pick-item__input" type="radio" name="step6" id="step6-1" value="Мойка из камня">
 						<div class="pick-item__label">Мойка из камня<br>(цена отдельно 9 690 руб.)</div>
 					</label>
 					<!-- ONE-ITEM END -->
@@ -384,7 +384,7 @@
 						<div class="pick-item__img">
 							<img src="img/s6-2.jpg" alt="item">
 						</div>
-						<input class="pick-item__input" type="radio" name="step6" id="step6-2" value="Подарок к кухне: Светодиодная подсветка">
+						<input class="pick-item__input" type="radio" name="step6" id="step6-2" value="Светодиодная подсветка">
 						<div class="pick-item__label">Светодиодная подсветка<br>(цена отдельно 8 990 руб.)</div>
 					</label>
 					<!-- ONE-ITEM END -->
@@ -394,7 +394,7 @@
 						<div class="pick-item__img">
 							<img src="img/s6-3.jpg" alt="item">
 						</div>
-						<input class="pick-item__input" type="radio" name="step6" id="step6-3" value="Подарок к кухне: iPhone 6">
+						<input class="pick-item__input" type="radio" name="step6" id="step6-3" value="iPhone 6">
 						<div class="pick-item__label">iPhone 6<br>(цена отдельно 15 990 руб.)</div>
 					</label>
 					<!-- ONE-ITEM END -->
@@ -407,7 +407,7 @@
 
 
 			<!-- ONE-STEP START -->
-			<div class="step-slide">
+			<div class="step-slide prev_slide">
 				<h3 class="step-slide__title"><div class="step-slide__title-counter">7</div>
 					Спасибо за ответы! Получите результат расчета, оставив контакты.
 				</h3>
@@ -426,7 +426,7 @@
 			<!-- ONE-STEP END -->
 
 			<!-- ONE-STEP START -->
-			<div class="step-slide">
+			<div class="step-slide last_slide">
 				<!-- AFTER SUBMIT START -->
 				<div class="after-submit">
 					<div class="container">
