--- a/test/index.html
+++ b/test/index.html
@@ -417,7 +417,10 @@
 						<label class="last-step-form__label">Введите номер телефона, мы вышлем СМС с результатами:</label>
 						<input class="last-step-form__input contact-form__input_name" type="text" name="name" placeholder="Введите Ваше имя">
 						<input class="last-step-form__input contact-form__input_tel" type="tel" name="tel" placeholder="Введите Ваш номер">
-						<button class="last-step-form__button btn-shine contact-form__button" type="submit" onclick="yaCounter47313057.reachGoal('GOOD'); return true;"><span>получить результат расчета</span></button>
+						<button class="last-step-form__button btn-shine contact-form__button" type="submit" onclick="yaCounter47313057.reachGoal('GOOD'); return true;">
+							<img src="images/bx_loader.gif" alt="">
+							<span>получить результат расчета</span>
+						</button>
 						<div class="last-step-form__accept">Нажимая на кнопку, вы принимаете <a href="privacy.html" target="_blank">Положение и Согласие</a> на обработку персональных данных.</div>
 					</div>
 				</div>
