--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<link rel="shortcut icon" href="img/fav-wt.ico" type="image/x-icon">
-	<title>Создание сайтов в Алматы, создание и продвижение сайтов под ключ.</title>
-	<meta name="description" content="Оказываем качественные услуги по созданию и продвижению сайтов под ключ. Занимаемся этим более 7 лет.">
+	<title>Пример квиз-лендинга</title>
+	<meta name="description" content="Пример квиз-лендинга">
 	<meta http-equiv="cache-control" content="no-cache">
 	<meta http-equiv="expires" content="0">
 	<meta http-equiv="pragma" content="no-cache">
@@ -36,8 +35,8 @@
 			<p>Надежные кухни от производителя</p>
 		</div>
 		<div class="header_contacts">
-			<a href="tel:+79150052583">+7 915 005 25 83</a> <br>
-			<p style="text-align:left;">Производство: Люберцы, <br>пос. Октябрьский, ул. Ленина 55</p>
+			<a href="tel:+77771234567">+7 777 123 45 67</a> <br>
+			<p style="text-align:left;">Производство: Алматы, <br>пос. Октябрьский, ул. Ленина 55</p>
 		</div>
 	</div>
 	<div class="container">
@@ -63,28 +62,40 @@
 		<div class="container">
 			<h2 class="title"><span>Примеры наших кухонь</span></h2>
 			<div class="slider-container">
-				<div class="our-works-slider slick-initialized slick-slider">
+				<div class="our-works-slider">
 					<button type="button" data-role="none" class="slick-prev slick-arrow" aria-label="Previous" role="button" style="">Previous</button>
-					<div aria-live="polite" class="slick-list draggable">
-						<div class="slick-track" role="listbox" style="opacity: 1; width: 5055px; transform: translate3d(-1348px, 0px, 0px);">
-							<div class="slide slick-slide" data-slick-index="0" aria-hidden="true" tabindex="-1" role="option" aria-describedby="slick-slide00" style="width: 337px;">
-								<a data-fancybox="gallery" href="img/gallery/1.jpg" tabindex="-1">
-									<img src="img/gallery/1.jpg" alt="">
-								</a>
-							</div>
-							<div class="slide slick-slide slick-current slick-active" data-slick-index="1" aria-hidden="false" tabindex="-1" role="option" aria-describedby="slick-slide01" style="width: 337px;">
-								<a data-fancybox="gallery" href="img/gallery/2.jpg" tabindex="0">
-									<img src="img/gallery/2.jpg" alt="">
-								</a>
-							</div>
-							<div class="slide slick-slide slick-active" data-slick-index="2" aria-hidden="false" tabindex="-1" role="option" aria-describedby="slick-slide02" style="width: 337px;">
-								<a data-fancybox="gallery" href="img/gallery/3.jpg" tabindex="0">
-									<img src="img/gallery/3.jpg" alt="">
-								</a>
-							</div>
-						</div>
+					<div>
+						<a data-fancybox="gallery" href="img/gallery/1.jpg" tabindex="0">
+							<img src="img/gallery/1.jpg" alt="">
+						</a>
+					</div>
+					<div>
+						<a data-fancybox="gallery" href="img/gallery/2.jpg" tabindex="0">
+							<img src="img/gallery/2.jpg" alt="">
+						</a>
+					</div>
+					<div>
+						<a data-fancybox="gallery" href="img/gallery/3.jpg" tabindex="0">
+							<img src="img/gallery/3.jpg" alt="">
+						</a>
+					</div>
+					<div>
+						<a data-fancybox="gallery" href="img/gallery/1.jpg" tabindex="0">
+							<img src="img/gallery/1.jpg" alt="">
+						</a>
+					</div>
+					<div>
+						<a data-fancybox="gallery" href="img/gallery/2.jpg" tabindex="0">
+							<img src="img/gallery/2.jpg" alt="">
+						</a>
+					</div>
+					<div>
+						<a data-fancybox="gallery" href="img/gallery/3.jpg" tabindex="0">
+							<img src="img/gallery/3.jpg" alt="">
+						</a>
 					</div>
 					<button type="button" data-role="none" class="slick-next slick-arrow" aria-label="Next" role="button" style="">Next</button></div>
+			</div>
 			</div>
 		</div>
 	</div>
