--- a/test/index.html
+++ b/test/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 	<link rel="stylesheet" href="style.css">
-	<script type="text/javascript" async="" src="https://mc.yandex.ru/metrika/watch.js"></script><script src="libs/jquery-3.2.1.min.js"></script>
+	<script type="text/javascript" async="" src="https://mc.yandex.ru/metrika/watch.js"></script>
 	<script src="libs/jquery-3.2.1.min.js"></script>
 	<script src="libs/jquery.bxslider.min.js"></script>
 	<script src="libs/jquery.maskedinput.min.js"></script>
@@ -40,7 +40,6 @@
         })(document, window, "yandex_metrika_callbacks");
 	</script>
 	<noscript><div><img src="https://mc.yandex.ru/watch/47313057" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
-	<script src="../../../Downloads/main.min.js"></script>
 	<!-- /Yandex.Metrika counter -->
 </head>
 <body>
@@ -330,29 +329,29 @@
 				<div class="step-slide__grid">
 					<!-- ONE-ITEM START -->
 					<label for="step5-1" class="pick-item">
-						<input class="pick-item__input" type="radio" name="step5" id="step5-1" value="Стандарт от 50 000 до 150 000 руб.">
-						<div class="pick-item__label">Стандарт<br>от 50 000 до 150 000 руб.</div>
+						<input class="pick-item__input" type="radio" name="step5" id="step5-1" value="Стандарт от 300 000 до 700 000 тг">
+						<div class="pick-item__label">Стандарт<br>от 300 000 до 700 000 тг</div>
 					</label>
 					<!-- ONE-ITEM END -->
 
 					<!-- ONE-ITEM START -->
 					<label for="step5-2" class="pick-item">
-						<input class="pick-item__input" type="radio" name="step5" id="step5-2" value="Престиж от 150 000 до 200 000 руб.">
-						<div class="pick-item__label">Престиж<br>от 150 000 до 200 000 руб.</div>
+						<input class="pick-item__input" type="radio" name="step5" id="step5-2" value="Престиж от 700 000 до 1 000 000 тг">
+						<div class="pick-item__label">Престиж<br>от 700 000 до 1 000 000 тг</div>
 					</label>
 					<!-- ONE-ITEM END -->
 
 					<!-- ONE-ITEM START -->
 					<label for="step5-3" class="pick-item">
 						<input class="pick-item__input" type="radio" name="step5" id="step5-3" value="Премиум от 200 000 до 350 000 руб.">
-						<div class="pick-item__label">Премиум<br>от 200 000 до 350 000 руб.</div>
+						<div class="pick-item__label">Премиум<br>от 1 000 000 до 2 000 000 тг</div>
 					</label>
 					<!-- ONE-ITEM END -->
 
 					<!-- ONE-ITEM START -->
 					<label for="step5-4" class="pick-item">
-						<input class="pick-item__input" type="radio" name="step5" id="step5-4" value="Максимальный от 350 000 руб.">
-						<div class="pick-item__label">Максимальный<br>от 350 000 руб.</div>
+						<input class="pick-item__input" type="radio" name="step5" id="step5-4" value="Максимальный от 2 000 000 тг">
+						<div class="pick-item__label">Максимальный<br>от 2 000 000 тг</div>
 					</label>
 					<!-- ONE-ITEM END -->
 
@@ -375,7 +374,7 @@
 							<img src="img/s6-1.jpg" alt="item">
 						</div>
 						<input class="pick-item__input" type="radio" name="step6" id="step6-1" value="Мойка из камня">
-						<div class="pick-item__label">Мойка из камня<br>(цена отдельно 9 690 руб.)</div>
+						<div class="pick-item__label">Мойка из камня<br>(цена отдельно 54 900 тг)</div>
 					</label>
 					<!-- ONE-ITEM END -->
 
@@ -385,7 +384,7 @@
 							<img src="img/s6-2.jpg" alt="item">
 						</div>
 						<input class="pick-item__input" type="radio" name="step6" id="step6-2" value="Светодиодная подсветка">
-						<div class="pick-item__label">Светодиодная подсветка<br>(цена отдельно 8 990 руб.)</div>
+						<div class="pick-item__label">Светодиодная подсветка<br>(цена отдельно 49 000 тг)</div>
 					</label>
 					<!-- ONE-ITEM END -->
 
@@ -395,7 +394,7 @@
 							<img src="img/s6-3.jpg" alt="item">
 						</div>
 						<input class="pick-item__input" type="radio" name="step6" id="step6-3" value="iPhone 6">
-						<div class="pick-item__label">iPhone 6<br>(цена отдельно 15 990 руб.)</div>
+						<div class="pick-item__label">iPhone 6<br>(цена отдельно 89 000 тг)</div>
 					</label>
 					<!-- ONE-ITEM END -->
 
@@ -418,7 +417,7 @@
 						<input class="last-step-form__input contact-form__input_name" type="text" name="name" placeholder="Введите Ваше имя">
 						<input class="last-step-form__input contact-form__input_tel" type="tel" name="tel" placeholder="Введите Ваш номер">
 						<button class="last-step-form__button btn-shine contact-form__button" type="submit" onclick="yaCounter47313057.reachGoal('GOOD'); return true;">
-							<img src="images/bx_loader.gif" alt="">
+							<!--<img src="images/bx_loader.gif" alt="">-->
 							<span>получить результат расчета</span>
 						</button>
 						<div class="last-step-form__accept">Нажимая на кнопку, вы принимаете <a href="privacy.html" target="_blank">Положение и Согласие</a> на обработку персональных данных.</div>
