--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 	<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="css/media.css">
+	<link rel="stylesheet" type="text/css" href="css/video.min.css">
 	<script src="js/jquery-3.2.1.min.js"></script>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.2.5/jquery.fancybox.min.css">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.2.5/jquery.fancybox.min.js"></script>
@@ -50,7 +51,7 @@
 		</div>
 		<div class="header_contacts">
 			<a href="tel:+77771234567">+7 777 123 45 67</a> <br>
-			<p style="text-align:left;">Производство: Алматы, <br>пос. Октябрьский, ул. Ленина 55</p>
+			<p style="text-align:left;">Производство: Алматы, <br>пос. Алмерек, ул. Сатбаева 55</p>
 		</div>
 	</div>
 	<div class="container">
@@ -114,8 +115,18 @@
 		</div>
 	</div>
 </header>
+<div class="video-widget" data-state="default">
+	<div class="video-widget__container">
+		<video id="video-widget__video" loop="" autoplay="" playsinline="" preload="auto" muted="muted" controlslist="nodownload" disablepictureinpicture="" class="video-widget__video" src="img/video2.mp4">
+			<source src="img/video2.mp4" type="video/mp4">
+		</video>
+		<div class="video-widget__close"></div>
+		<a class="video-widget__button" href="#plan">Тарифы</a>
+	</div>
+</div>
 <footer>
 	<script src="js/main.js"></script>
+	<script src="js/video.min.js"></script>
 </footer>
 <!--
 <div class="fancybox-container fancybox-is-open fancybox-can-drag" role="dialog" tabindex="-1" id="fancybox-container-3" style="transition-duration: 500ms;">
