--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 			<source src="img/video.mp4" type="video/mp4">
 		</video>
 		<div class="video-widget__close"></div>
-		<a class="video-widget__button" href="#feedback">Хочу</a>
+		<a class="video-widget__button" href="https://web-tech.kz/#feedback" target="_blank">Хочу</a>
 	</div>
 </div>
 <footer>
