--- a/test/index.html
+++ b/test/index.html
@@ -3,7 +3,7 @@
 	<title>Узнайте стоимость вашей будущей кухни за 60 секунд + получите гарантированный подарок</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="css/project.min.css">
 	<script type="text/javascript" async="" src="https://mc.yandex.ru/metrika/watch.js"></script>
 	<script src="libs/jquery-3.2.1.min.js"></script>
 	<script src="libs/jquery.bxslider.min.js"></script>
