--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 	<link rel="stylesheet" type="text/css" href="css/project.min.css">
 	<link rel="stylesheet" type="text/css" href="css/video.min.css">
 	<script src="js/jquery-3.2.1.min.js"></script>
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.2.5/jquery.fancybox.min.css">
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.2.5/jquery.fancybox.min.js"></script>
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css">
+	<script src="https://cdn.jsdelivr.net/npm/@fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
 	<!-- arcticmodal -->
 	<link rel="stylesheet" type="text/css" href="libs/arcticmodal/jquery.arcticmodal-0.3.css">
 	<script src="libs/arcticmodal/jquery.arcticmodal-0.3.min.js"></script>
